--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -71,6 +71,9 @@ display: block;
   display: inline-block;
   transition: background-color 0.6s ease;
 }
+.dot.active {
+  background-color: #ec4899; /* pink-500 */
+}
 
 .active, .dot:hover {
   background-color: #717171;
