--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -65,84 +65,6 @@
   </div>
 </nav> -->
 
-<nav class="h-50 bg-gradient-to-r from-pink-500 to-white border-gray-200 dark:bg-gray-900">
-  <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-    <!-- Logo -->
-    <a class="flex items-center space-x-3 rtl:space-x-reverse">
-      <img src="assets/images/htoo1.jpg" class="h-20 w-100 p-0" alt="Cake Logo" />
-      <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">CAKE SHOP INFO</span>
-    </a>
-
-    <!-- Mobile Hamburger -->
-    <button type="button" (click)="toggleMenu()"
-      class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600">
-      <span class="sr-only">Open main menu</span>
-      <svg class="w-5 h-5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
-        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-          d="M1 1h15M1 7h15M1 13h15" />
-      </svg>
-    </button>
-
-    <!-- Menu -->
-    <div [ngClass]="{'hidden': !isMenuOpen, 'block': isMenuOpen}" class="w-full md:block md:w-auto" id="navbar-default">
-      <ul
-        class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg  
-               md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 
-               dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
-        
-        <!-- Category -->
-        <li>
-          <div class="relative inline-block group pb-2">
-            <button
-              (click)="toggleCategory()" 
-              class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 
-                     md:hover:bg-transparent md:border-0 md:hover:text-white md:p-0 
-                     dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 
-                     dark:hover:text-white md:dark:hover:bg-transparent">
-              Category
-            </button>
-
-            <!-- Dropdown -->
-            <div
-              class="absolute left-0 top-full mt-0 w-44 bg-gradient-to-b from-pink-300 to-white rounded-lg shadow-lg
-                     transition-opacity duration-300 delay-150 z-50
-                     opacity-0 pointer-events-none group-hover:opacity-100 group-hover:pointer-events-auto
-                     md:opacity-0 md:pointer-events-none
-                     "
-              [ngClass]="{'opacity-100 pointer-events-auto': isCategoryOpen && isMenuOpen}">
-              <ul class="py-2 text-sm text-gray-700 dark:text-gray-200">
-                <li><a href="#" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Cake</a></li>
-                <li><a href="#" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Drinks</a></li>
-                <li><a href="#" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Dessert</a></li>
-                <li><a href="#" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Ice Cream</a></li>
-              </ul>
-            </div>
-          </div>
-        </li>
-
-        <!-- Other Menu Items -->
-        <li>
-          <a href="#"
-            class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent 
-                   md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white 
-                   md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white 
-                   md:dark:hover:bg-transparent">
-            About
-          </a>
-        </li>
-        <li>
-          <a href="#"
-            class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent 
-                   md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white 
-                   md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white 
-                   md:dark:hover:bg-transparent">
-            Contact
-          </a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
 
 
 
@@ -173,3 +95,5 @@
     [class.bg-pink-600]="currentIndex === i" (click)="currentSlide(i)">
   </span>
 </div>
+
+<app-about></app-about>
